fix board spacing

--- a/ucdavis/history/resources/style.css
+++ b/ucdavis/history/resources/style.css
@@ -486,15 +486,11 @@ color: #000000;
 	width:100%;
 	background:url(images/bgr_body.jpg) repeat-y;
 }
-    .body_pg2{
-		width:100%;
-		background:url(images/bgr_body_2col.jpg) repeat-y;
-}
-     .body_top_pg2{
-		width:100%;
-		background:url(images/bgr_body_top_pg2.jpg) no-repeat;
-		overflow:hidden;
-		padding:15px 0 0 0;
+#body_top{
+	width:100%;
+	background:url(images/bgr_body_top.jpg) no-repeat;
+	overflow:hidden;
+	padding:15px 0 0 0;
 }
 
 .page-template-page-wide-php #body{
